--- a/src/app/team/clubhouse/clubhouse.component.css
+++ b/src/app/team/clubhouse/clubhouse.component.css
@@ -8,7 +8,6 @@
     flex-direction: column;
     align-items: center;
     color: #fff;
-    margin-top: 64px;
 }
 
 .header__content {
